# s2-hooking

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES
example/: hook_types.cpp
include/: hooking.h
src/: hook_traits.h  hooking.cpp
